[package]
name = "movie_packager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
aws-config = "1.1.1"
aws-types = "1.1.1"
aws-sdk-s3 = "1.11.0"
aws-sdk-dynamodb = "1.9.0"