[package]
name = "movie_packager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "download"
path = "src/download.rs"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "download2"
path = "src/download2.rs"

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
aws-config = "1.1.1"
aws-types = "1.1.1"
aws-sdk-s3 = "1.11.0"
aws-sdk-dynamodb = "1.9.0"
rusoto_core = "0.48.0"
rusoto_s3 = "0.48.0"

